# mem_alloc

./: CMakeLists.txt  main.c
include/: mem_alloc.h
include/internal/: alignment.h  arena.h  binary_tree.h  bit_utils.h  header.h
src/: arena.c  binary_tree.c  header.c  header_states.inl  main.c  mem_alloc.c
